--- a/frontend/src/components/Sign-in/sign.css
+++ b/frontend/src/components/Sign-in/sign.css
@@ -2,14 +2,77 @@
     color:red;
     text-align:center;
 }
-.bg-slate-50 img{
+.signupGroup img{
 
     width:35px;
 }
-.bg-slate-50{
-margin: 1rem 4rem ;
+
+body{
+    /* background-image: url("../../assets/img/back-image.jpg"); */
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+h1{
+    color: black;
+    margin-left: 12%;
+    margin-bottom: 50px;
 }
 
-.or{
-text-align:center
+.signupForm{
+    display: flex;
+    flex-direction: column;
+    opacity: 0.95;
+    width: 50%;
+    margin: 15% auto;
+    background-color: #ebeaea;
+    border-radius: 50px;
+    box-shadow: 5px 5px 5px rgb(139, 137, 137);
+}
+.formInput{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: black;
+    font-size: 20px;
+    font-weight: 700;
+    max-width: 80%;
+    margin: 0 auto;
+}
+
+.formInput input{
+    border-radius: 10px;
+    border: none;
+    height: 41px;
+    margin: 20px;
+    font-size: 20px;
+    text-align: center;
+}
+.submitButtons{
+    display: flex;
+    margin: 20px auto;
+    flex-direction: column;
+    width: 50%;
+    text-align: center;
+}
+.signupGroup{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    color: black;
+    align-items: center;
+    justify-content: center;
+    
+}
+button{
+    font-size: 20px;
+    width: 179px;
+    height: 45px;
+    background-color: rgb(192, 152, 78);
+    border-radius: 10%;
+    margin: 20px auto;
+    border: none;
+}
+button:hover{
+    background-color: rgb(249, 198, 104);
+    cursor: pointer;
 }
